--- a/v0.2/KMD/app/src/main/res/values/strings.xml
+++ b/v0.2/KMD/app/src/main/res/values/strings.xml
@@ -12,9 +12,12 @@
     <string name="orders_add">Add Order</string>
     <string name="orders_new">Create New Order</string>
     <string name="orders_details">Order Details</string>
+    <string name="orders_status">Status: </string>
     <string name="orders_customer_phone">Phone No:</string>
     <string name="orders_delete_success">Order Deleted!</string>
     <string name="orders_insert_success">Order added successfully!</string>
+    <string name="entry_item_present">Present</string>
+    <string name="entry_item_missing">Missing</string>
 
     <string name="orders_field_date">Date</string>
     <string name="orders_field_empid">Employee ID</string>
@@ -27,9 +30,18 @@
     <string name="sku_tab">SKU Search</string>
     <string name="sku_search_bar">Search products...</string>
 
-    //General Preference
+    //Preferences Screen
+    <string name="pref_settings_title">Settings</string>
     <string name="pref_general_title">General</string>
     <string name="pref_general_summary">Store Number, Store Name</string>
+    <string name="pref_employees_title">Employees</string>
+    <string name="pref_employees_summary">Add and edit employees</string>
+    <string name="pref_appearance_title">Appearance</string>
+    <string name="pref_appearance_summary">Theme, tabs</string>
+    <string name="pref_data_title">Data</string>
+    <string name="pref_data_summary">Database, storage locations</string>
+
+    //General Preference
     <string name="pref_general_category_store">Store Details</string>
     <string name="pref_general_store_name">Store Name</string>
     <string name="pref_general_store_name_description">Enter store name here e.g. Newmarket</string>
@@ -37,10 +49,15 @@
     <string name="pref_general_store_number_description">Enter store number here e.g. 183</string>
 
     //Employees Preference
-    <string name="pref_employees_title">Employees</string>
-    <string name="pref_employees_summary">Add and edit employees</string>
     <string name="pref_employees_current">Current Employees</string>
     <string name="pref_employees_deactivated">Deactivated Employees</string>
+
+    //Appearance Preferences
+    <string name="pref_appearance_category_theme">Theme</string>
+    <string name="pref_appearance_material_you_title">Material You</string>
+    <string name="pref_appearance_material_you_summary">Enable Material You dynamic colors.</string>
+    <string name="pref_appearance_material_you_summary_disabled">Only available for Android 12 and newer.</string>
+    <string name="pref_appearance_category_display">Display</string>
 
     //Crash screen
     <string name="crash_screen_title">Oops</string>
