--- a/v0.2/KMD/app/src/main/res/values/strings.xml
+++ b/v0.2/KMD/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="sku_tab">SKU Search</string>
     <string name="sku_search_bar">Search products...</string>
 
+    //Tools Tab
+    <string name="tools_tab">Tools</string>
+
     //Preferences Screen
     <string name="pref_settings_title">Settings</string>
     <string name="pref_general_title">General</string>
