--- a/v0.2/KMD/app/src/main/res/values/strings.xml
+++ b/v0.2/KMD/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="pref_appearance_summary">Theme, tabs</string>
     <string name="pref_data_title">Data</string>
     <string name="pref_data_summary">Database, storage locations</string>
+    <string name="pref_about_title">About</string>
 
     //General Preference
     <string name="pref_general_category_store">Store Details</string>
@@ -105,5 +106,10 @@
     <string name="pref_appearance_darkmode_dark">Dark</string>
 
     /////////////////////////////
-    
+
+    <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="clipboard_copy_error">Failed to copy to clipboard</string>
+    <string name="check_for_updates">Check for updates</string>
+    <string name="licenses">Open source licenses</string>
+    <string name="version">Version</string>
 </resources>
