--- a/KMD/app/src/main/res/values/strings.xml
+++ b/KMD/app/src/main/res/values/strings.xml
@@ -27,8 +27,8 @@
     <string name="orders_edit_notes">Edit Order Notes</string>
     <string name="orders_details">Order Details</string>
     <string name="orders_items">Order Items</string>
-    <string name="orders_status">Status: </string>
-    <string name="orders_customer_phone">Phone No:</string>
+    <string name="orders_emp">Employee: %s</string>
+    <string name="orders_customer_phone">Phone No: %s</string>
     <string name="orders_delete_success">Order Deleted!</string>
     <string name="orders_insert_success">Order added successfully!</string>
     <string name="orders_update_success">Order updated successfully!</string>
@@ -45,6 +45,7 @@
     <string name="orders_field_phone">Phone</string>
     <string name="orders_field_misc">Misc</string>
     <string name="orders_field_notes">Notes</string>
+    <string name="orders_field_status">Status</string>
     <string name="orders_field_notes_add">Add Notes</string>
 
     <string name="orders_state_not_ordered">Not Ordered</string>
